--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "14"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/consolidate": "^0.14.0",
+    "consolidate": "^0.16.0",
+    "express": "^4.17.1",
+    "express-recaptcha": "^5.0.2",
+    "express-validator": "^6.10.0",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "handlebars": "^4.7.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
