--- a/functions/package.json
+++ b/functions/package.json
@@ -21,7 +21,8 @@
     "express-validator": "^6.10.0",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
