--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/gulp": "^4.0.8",
     "@types/gulp-rename": "^2.0.0",
+    "firebase-tools": "^9.10.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-compile-handlebars": "^0.6.1",
