--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "devDependencies": {
     "@types/gulp": "^4.0.8",
     "@types/gulp-rename": "^2.0.0",
+    "@types/gulp-sass": "^4.0.0",
     "firebase-tools": "^9.10.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "sass": "^1.32.12",
     "ts-node": "^9.1.1"
+  },
+  "dependencies": {
+    "photoswipe": "^4.1.3"
   }
 }
