--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A website for a great landscaping company in Northwest Arkansas.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp",
+    "serve": "firebase serve",
+    "deploy": "firebase deploy"
   },
   "repository": {
     "type": "git",
@@ -20,17 +22,22 @@
     "@types/gulp": "^4.0.8",
     "@types/gulp-rename": "^2.0.0",
     "@types/gulp-sass": "^4.0.0",
+    "del": "^6.0.0",
     "dotenv": "^8.2.0",
-    "firebase-tools": "^9.10.0",
+    "firebase-tools": "^9.6.1",
     "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-rename": "^2.0.0",
+    "gulp-run-command": "^0.0.10",
     "gulp-sass": "^4.1.0",
     "sass": "^1.32.12",
     "ts-node": "^9.1.1"
   },
   "dependencies": {
+    "@types/google.maps": "^3.44.3",
+    "@types/grecaptcha": "^3.0.2",
+    "@types/jquery": "^3.5.5",
+    "@types/photoswipe": "^4.1.1",
     "jquery-parallax.js": "^1.5.0",
     "photoswipe": "^4.1.3"
   }
