Updated submitQuote to v2 function

--- a/functions/.eslintrc
+++ b/functions/.eslintrc
@@ -10,7 +10,7 @@
     "plugin:import/warnings",
     "plugin:import/typescript",
     "google",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -25,6 +25,19 @@
     "import"
   ],
   "rules": {
+    // turn on errors for missing imports
+    "import/no-unresolved": "error",
     "quotes": ["error", "double"]
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./tsconfig.json"
+      }
+    }
   }
 }
