--- a/functions/package.json
+++ b/functions/package.json
@@ -10,28 +10,30 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "14"
+    "node": "18"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@types/consolidate": "^0.14.0",
+    "@types/consolidate": "^0.14.1",
+    "axios": "^1.4.0",
     "consolidate": "^0.16.0",
-    "express": "^4.17.1",
-    "express-recaptcha": "^5.0.2",
-    "express-validator": "^6.10.0",
-    "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
-    "handlebars": "^4.7.7",
-    "unirest": "^0.6.0"
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
+    "express-recaptcha": "^5.1.0",
+    "express-validator": "^7.0.1",
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.4.0",
+    "handlebars": "^4.7.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.22.0",
-    "firebase-functions-test": "^0.2.0",
-    "typescript": "^3.8.0"
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^5.0.4"
   },
   "private": true
 }
