--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,18 +6,14 @@
     "outDir": "static/js",
     "sourceMap": true,
     "strict": true,
+    "ignoreDeprecations": "5.0",
     "target": "es3",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "downlevelIteration": true
   },
   "typeRoots": [
-    "src/types",
     "node_modules/@types",
-  ],
-  "files": [
-    "node_modules/@types/photoswipe/dist/photoswipe-ui-default/index.d.ts",
-    "src/types/gulp-compile-handlebars.d.ts"
   ],
   "compileOnSave": true,
   "include": [
