--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
   },
   "homepage": "https://github.com/castletheperson/ground-effects#readme",
   "devDependencies": {
-    "@types/gulp": "^4.0.8",
-    "@types/gulp-rename": "^2.0.0",
-    "@types/gulp-sass": "^4.0.0",
-    "del": "^6.0.0",
+    "@types/gulp": "^4.0.11",
+    "@types/gulp-rename": "^2.0.2",
+    "@types/gulp-sass": "^5.0.1",
+    "del": "^6.1.1",
     "dotenv": "^8.2.0",
-    "firebase-tools": "^9.6.1",
+    "firebase-tools": "^12.4.0",
     "gulp": "^4.0.2",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-rename": "^2.0.0",
     "gulp-run-command": "^0.0.10",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.1.0",
     "sass": "^1.32.12",
     "ts-node": "^9.1.1"
   },
@@ -38,6 +38,7 @@
     "@types/grecaptcha": "^3.0.2",
     "@types/jquery": "^3.5.5",
     "@types/photoswipe": "^4.1.1",
+    "jquery": "^3.7.0",
     "jquery-parallax.js": "^1.5.0",
     "photoswipe": "^4.1.3"
   }
