--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
+    "moduleResolution": "node",
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "outDir": "static/js",
     "sourceMap": true,
     "strict": true,
-    "ignoreDeprecations": "5.0",
-    "target": "es3",
+    "target": "es6",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "downlevelIteration": true
