--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "groundeffects",
   "version": "1.0.0",
   "description": "A website for a great landscaping company in Northwest Arkansas.",
-  "main": "index.js",
   "scripts": {
     "gulp": "gulp",
     "serve": "firebase serve",
@@ -19,19 +18,13 @@
   },
   "homepage": "https://github.com/castletheperson/ground-effects#readme",
   "devDependencies": {
-    "@types/gulp": "^4.0.11",
-    "@types/gulp-rename": "^2.0.2",
-    "@types/gulp-sass": "^5.0.1",
-    "del": "^6.1.1",
-    "dotenv": "^8.2.0",
+    "@types/handlebars-webpack-plugin": "^2.2.2",
+    "dotenv": "^16.3.1",
     "firebase-tools": "^12.4.0",
-    "gulp": "^4.0.2",
-    "gulp-compile-handlebars": "^0.6.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-run-command": "^0.0.10",
-    "gulp-sass": "^5.1.0",
-    "sass": "^1.32.12",
-    "ts-node": "^9.1.1"
+    "handlebars-webpack-plugin": "^2.2.1",
+    "ts-node": "^10.9.1",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@types/google.maps": "^3.44.3",
@@ -41,5 +34,6 @@
     "jquery": "^3.7.0",
     "jquery-parallax.js": "^1.5.0",
     "photoswipe": "^4.1.3"
-  }
+  },
+  "private": "true"
 }
