--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "@types/google.maps": "^3.44.3",
     "@types/grecaptcha": "^3.0.2",
     "@types/jquery": "^3.5.5",
-    "@types/photoswipe": "^4.1.1",
+    "@types/photoswipe": "4.1.2",
     "jquery": "^3.7.0",
     "jquery-parallax.js": "^1.5.0",
-    "photoswipe": "^4.1.3"
+    "photoswipe": "4.1.3"
   }
 }
